[squash] PR changes, update existing endpoint to use javax validation